<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.abhishek.cricketquiz.MainActivity">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques_1"
                android:layout_marginBottom="8dp"/>

            <RadioGroup
                android:id="@+id/answer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/option1_ans1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="Sachin Tendulkar"
                    android:textSize="20sp"/>

                <RadioButton
                    android:id="@+id/option2_ans1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="Virat Kohli"
                    android:textSize="20sp"/>

                <RadioButton
                    android:id="@+id/option3_ans1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="Ricky Pointing"
                    android:textSize="20sp"
                    android:layout_marginBottom="16dp"/>

            </RadioGroup>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques_2"
                android:layout_marginBottom="8dp"/>

            <CheckBox
                android:id="@+id/option1_ans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="India"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/option2_ans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Bangladesh"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/option3_ans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Srilanka"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/option4_ans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Pakistan"
                android:textSize="20sp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques_3"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/answer_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Answer"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques_4"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/answer_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Answer"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques_5"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/answer_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Answer"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques_6"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/answer_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Answer" />

        </LinearLayout>

        <Button
            android:layout_below="@id/linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="SUBMIT"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:onClick="submitQuiz"/>

    </RelativeLayout>
</ScrollView>

